--- a/k8s/sleepr/templates/payments/deployment.yaml
+++ b/k8s/sleepr/templates/payments/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: payments
     spec:
       containers:
-        - image: africa-south1-docker.pkg.dev/testing-purposes-230609/payments/production
+        - image: 390402563935.dkr.ecr.us-east-1.amazonaws.com/payments:latest # GCP image # africa-south1-docker.pkg.dev/testing-purposes-230609/payments/production
           name: payments
           env:
             - name: PORT
