--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,12 @@ services:
       dockerfile: ./apps/reservations/Dockerfile
       target: development
     command: pnpm run start:dev reservations
+    # command: pnpm run start:debug reservations # Debugging mode only
     env_file:
       - ./apps/reservations/.env
     ports:
       - '3000:3000'
+      # - '9229:9229' # Debugging mode only
     volumes:
       - .:/usr/src/app
   auth:
